--- a/src/app/features/users/card/student-card.component.scss
+++ b/src/app/features/users/card/student-card.component.scss
@@ -57,11 +57,13 @@
     }
 
     img.avatar-image[mat-card-avatar] {
-      width: 60px;
-      height: 60px;
+      width: 96px;
+      height: 96px;
       border-radius: 50%;
       object-fit: cover;
       border: 2px solid #e0e0e0;
+      display: block;
+      background-color: #f5f5f5;
     }
 
     mat-card-title {
