комит 6, поменял дизайн

--- a/src/app/features/assess/taking/test-result.component.html
+++ b/src/app/features/assess/taking/test-result.component.html
@@ -139,7 +139,7 @@
 
     <!-- Actions -->
     <div class="actions">
-      <button mat-raised-button color="primary" (click)="goToDashboard()">
+      <button mat-raised-button class="aqyldy-btn-mint" (click)="goToDashboard()">
         <mat-icon>home</mat-icon>
         Back to Dashboard
       </button>
