--- a/src/app/features/classes/list/classes-list.component.html
+++ b/src/app/features/classes/list/classes-list.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-lg font-semibold">Classes</h2>
     <div class="flex items-center gap-3">
       @if (canCreate()) {
-        <button mat-raised-button color="primary" (click)="openCreate()">
+        <button mat-raised-button class="aqyldy-btn-mint" (click)="openCreate()">
           <mat-icon>add</mat-icon>
           &nbsp;Create Class
         </button>
