--- a/src/app/features/users/list/users-list.component.html
+++ b/src/app/features/users/list/users-list.component.html
@@ -12,7 +12,7 @@
         </mat-slide-toggle>
       }
       @if (canCreate()) {
-        <button mat-raised-button color="primary" (click)="openCreate()">
+        <button mat-raised-button class="aqyldy-btn-mint" (click)="openCreate()">
           <mat-icon>person_add</mat-icon>
           &nbsp;{{ 'USERS.CREATE' | translate }}
         </button>
