--- a/src/app/shared/components/upload-avatar/upload-avatar.component.html
+++ b/src/app/shared/components/upload-avatar/upload-avatar.component.html
@@ -39,7 +39,7 @@
   <div class="actions">
     <button
       mat-raised-button
-      color="primary"
+      class="aqyldy-btn-mint"
       (click)="fileInput.click()"
       [disabled]="uploading()"
     >
