--- a/src/app/features/assess/taking/test-taking.component.html
+++ b/src/app/features/assess/taking/test-taking.component.html
@@ -88,7 +88,7 @@
           <button
             mat-raised-button
             *ngIf="!isLastQuestion()"
-            color="primary"
+            class="aqyldy-btn-mint"
             (click)="nextQuestion()"
           >
             Next
