--- a/src/app/features/timetable/edit/timetable-edit.component.html
+++ b/src/app/features/timetable/edit/timetable-edit.component.html
@@ -4,5 +4,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button>Cancel</button>
-  <button mat-raised-button color="primary">Save</button>
+  <button mat-raised-button class="aqyldy-btn-mint">Save</button>
 </mat-dialog-actions>
