--- a/src/app/features/users/card/student-card.component.html
+++ b/src/app/features/users/card/student-card.component.html
@@ -9,7 +9,7 @@
   <div *ngIf="error()" class="error-container">
     <mat-icon color="warn">error</mat-icon>
     <p>{{ error() }}</p>
-    <button mat-raised-button color="primary" (click)="goBack()">
+    <button mat-raised-button class="aqyldy-btn-mint" (click)="goBack()">
       <mat-icon>arrow_back</mat-icon>
       Back to List
     </button>
