--- a/src/app/features/users/edit/user-edit.component.html
+++ b/src/app/features/users/edit/user-edit.component.html
@@ -78,7 +78,7 @@
 
 <mat-dialog-actions align="end">
   <button mat-button (click)="close()" [disabled]="loading">Cancel</button>
-  <button mat-raised-button color="primary" (click)="submit()" [disabled]="form.invalid || loading">
+  <button mat-raised-button class="aqyldy-btn-mint" (click)="submit()" [disabled]="form.invalid || loading">
     {{ loading ? 'Saving...' : 'Save Changes' }}
   </button>
 </mat-dialog-actions>
